syntax = "proto3";

option go_package = "/;gotocloud";

package gotocloud;

service Agent {
  rpc Running (stream RunResult) returns (stream RunRequest) {}           // 执行CLI命令(s->c)
}

message RunCommandRequest {
  string command = 1;
  repeated string args = 2;
  RunCommandRequest next = 3;
}

message RunRequest {
  int64 workId = 1;
  string uuid = 2;
  string seq = 3; // 命令唯一标识
  string workdir = 4;
  RunCommandRequest command = 5;
}

message RunResult {
  int32 code = 1;
  int64 work_id =2;
  string uuid = 3;
  string seq = 4;

}